loomgui_core/tests/snapshots/snapshot__simple_panel.snap
---
source: loomgui_core/tests/snapshot.rs
expression: json
---
[
  {
    "node_id": 4097,
    "parent_id": null,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      1.0,
      1.0,
      1.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 1,
    "change_level": "Full",
    "reuse_key": 0,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            200.0
          ],
          [
            0.0,
            200.0
          ],
          [
            0.0,
            0.0
          ],
          [
            300.0,
            0.0
          ],
          [
            300.0,
            30.0
          ],
          [
            0.0,
            30.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ],
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7
        ],
        "image_path": null,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 12289,
    "parent_id": 8193,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      0.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 2,
    "change_level": "Full",
    "reuse_key": 0,
    "payload": {
      "Mesh": {
        "verts": [
          [
            -1.046875,
            16.1875
          ],
          [
            10.953125,
            16.1875
          ],
          [
            10.953125,
            2.1875
          ],
          [
            -1.046875,
            2.1875
          ],
          [
            9.7890625,
            16.695312
          ],
          [
            13.7890625,
            16.695312
          ],
          [
            13.7890625,
            1.6953125
          ],
          [
            9.7890625,
            1.6953125
          ],
          [
            13.15625,
            16.617188
          ],
          [
            21.15625,
            16.617188
          ],
          [
            21.15625,
            2.6171875
          ],
          [
            13.15625,
            2.6171875
          ],
          [
            20.507812,
            16.695312
          ],
          [
            24.507812,
            16.695312
          ],
          [
            24.507812,
            1.6953125
          ],
          [
            20.507812,
            1.6953125
          ],
          [
            24.328125,
            16.890625
          ],
          [
            35.328125,
            16.890625
          ],
          [
            35.328125,
            4.890625
          ],
          [
            24.328125,
            4.890625
          ]
        ],
        "uvs": [
          [
            0.0,
            0.0034179688
          ],
          [
            0.0029296875,
            0.0034179688
          ],
          [
            0.0029296875,
            0.0
          ],
          [
            0.0,
            0.0
          ],
          [
            0.0029296875,
            0.0036621094
          ],
          [
            0.00390625,
            0.0036621094
          ],
          [
            0.00390625,
            0.0
          ],
          [
            0.0029296875,
            0.0
          ],
          [
            0.00390625,
            0.0034179688
          ],
          [
            0.005859375,
            0.0034179688
          ],
          [
            0.005859375,
            0.0
          ],
          [
            0.00390625,
            0.0
          ],
          [
            0.005859375,
            0.0036621094
          ],
          [
            0.0068359375,
            0.0036621094
          ],
          [
            0.0068359375,
            0.0
          ],
          [
            0.005859375,
            0.0
          ],
          [
            0.0068359375,
            0.0029296875
          ],
          [
            0.009521484,
            0.0029296875
          ],
          [
            0.009521484,
            0.0
          ],
          [
            0.0068359375,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7,
          8,
          9,
          10,
          8,
          10,
          11,
          12,
          13,
          14,
          12,
          14,
          15,
          16,
          17,
          18,
          16,
          18,
          19
        ],
        "image_path": "loomgui://font-atlas/p0",
        "program": 1,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 16385,
    "parent_id": 4097,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      38.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 3,
    "change_level": "Full",
    "reuse_key": 0,
    "payload": {
      "Mesh": {
        "verts": [
          [
            0.0,
            38.0
          ],
          [
            100.0,
            38.0
          ],
          [
            100.0,
            78.0
          ],
          [
            0.0,
            78.0
          ]
        ],
        "uvs": [
          [
            0.0,
            1.0
          ],
          [
            1.0,
            1.0
          ],
          [
            1.0,
            0.0
          ],
          [
            0.0,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ],
          [
            0.0,
            0.0,
            0.0,
            0.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3
        ],
        "image_path": null,
        "program": 0,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  },
  {
    "node_id": 20481,
    "parent_id": 16385,
    "visible": true,
    "alpha": 1.0,
    "color_tint": [
      0.0,
      0.0,
      0.0,
      1.0
    ],
    "world_matrix": [
      1.0,
      0.0,
      0.0,
      1.0,
      0.0,
      38.0
    ],
    "blend": "Normal",
    "mask_context": 0,
    "sort_key": 4,
    "change_level": "Full",
    "reuse_key": 0,
    "payload": {
      "Mesh": {
        "verts": [
          [
            -0.1015625,
            54.976562
          ],
          [
            12.8984375,
            54.976562
          ],
          [
            12.8984375,
            39.976562
          ],
          [
            -0.1015625,
            39.976562
          ],
          [
            13.1640625,
            54.1875
          ],
          [
            25.164062,
            54.1875
          ],
          [
            25.164062,
            40.1875
          ],
          [
            13.1640625,
            40.1875
          ]
        ],
        "uvs": [
          [
            0.009521484,
            0.0036621094
          ],
          [
            0.0126953125,
            0.0036621094
          ],
          [
            0.0126953125,
            0.0
          ],
          [
            0.009521484,
            0.0
          ],
          [
            0.0126953125,
            0.0034179688
          ],
          [
            0.015625,
            0.0034179688
          ],
          [
            0.015625,
            0.0
          ],
          [
            0.0126953125,
            0.0
          ]
        ],
        "colors": [
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ],
          [
            0.0,
            0.0,
            0.0,
            1.0
          ]
        ],
        "indices": [
          0,
          1,
          2,
          0,
          2,
          3,
          4,
          5,
          6,
          4,
          6,
          7
        ],
        "image_path": "loomgui://font-atlas/p0",
        "program": 1,
        "color_matrix": [
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0,
          0.0
        ]
      }
    }
  }
]
